--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="main">
-            <input type="text" name="country" class="country-input" placeholder="Country:">
-            <button class="show-weather-button">Click Me!</button>
-            <div class="country-name">Country: None yet...</div>
-            <hr>
-            <div class="icon"></div>
-            <div class="data-block block-left"></div>
-            <div class="data-block block-right"></div>
+    <div class="country-picker">
+        <input type="text" placeholder="Netherlands">
+        <div class="btn">
+            <img src="https://www.clker.com/cliparts/9/T/2/h/X/7/search-icon-md.png" alt="">
         </div>
     </div>
+    <div class="container">
+        <div class="city">Amsterdam</div>
+        <div class="icon">
+            <img src="//cdn.weatherapi.com/weather/128x128/day/116.png" alt="">
+        </div>
+        <hr>
+        <div class="degrees"></div>
+        <div class="description"></div>
+    </div>
+
     <script src="./js/main.js"></script>
 </body>
 </html>
